Git Tests/force-app/main/default/default/objects/Configuration_Contract_Temp__mdt/Configuration_Contract_Temp__mdt.object-meta.xml
<CustomObject>
    <label>Configuration Contract Temp</label>
    <pluralLabel>Configuration Contract Temp</pluralLabel>
</CustomObject>