Git Tests/force-app/main/default/default/objects/Configuration_Contract_Temp__mdt/fields/Data_type__c.field-meta.xml
<CustomField>
    <fullName>Data_type__c</fullName>
    <label>Data type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTHER</fullName>
                <default>true</default>
                <label>OTHER</label>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>NUMERIC</fullName>
            </value>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>MOBILE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>