Git Tests/force-app/main/default/default/objects/Configuration_Contract_Temp__mdt/fields/Field_Name_CSV__c.field-meta.xml
<CustomField>
    <fullName>Field_Name_CSV__c</fullName>
    <label>Field Name CSV</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>