Git Tests/force-app/main/default/default/objects/Configuration_Contract_Temp__mdt/fields/Field_Name_SF__c.field-meta.xml
<CustomField>
    <fullName>Field_Name_SF__c</fullName>
    <label>Field Name SF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>