Git Tests/force-app/main/default/default/objects/Configuration_Contract_Temp__mdt/fields/OrderShow__c.field-meta.xml
<CustomField>
    <fullName>OrderShow__c</fullName>
    <label>Ordem de Exibição</label>
    <length>2</length>
    <type>Text</type>
</CustomField>